# oldtimers-xrpl-nft-rwa-microserver

./: Cargo.toml  README.md  env.example
src/: db.rs  main.rs  metadata.rs  redis_lock.rs  xrpl.rs
src/routes/: nft.rs  qr.rs  widget.rs
static/: dvp-widget.js
