[package]
name = "oldtimers-xrpl-nft-rwa"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
dotenvy = "0.15"
xrpl-rust = { version ="1.1.0", default-features = false, features = ["std", "core", "models", "wallet"] }
hex = "0.4"
anyhow = "1"
reqwest = { version = "0.13.2", features = ["json"] }

